2021-02-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 48073: Martijn Dekker: Doc/Zsh/builtins.yo, Src/builtin.c: fc
	-s is POSIX version of fc -e -.

2021-02-16  Peter Stephenson  <p.stephenson@samsung.com>

	* 47876: Justtine Tunney: Src/exec.c: Add more cases where
	shell scripts can be recognised from the first line as
	described by POSIX.

2021-02-16  Lawrence Velázquez  <vq@larryv.me>

	* 47830: Doc/Zsh/contrib.yo, README: Fix some documentation typos

2021-02-13  Oliver Kiddle  <opk@zsh.org>

	* unposted (Daniel): Completion/Unix/Command/_locale:
	add exclusion list missed in recent OpenBSD update

	* github #68: taiyu.len: Completion/Unix/Command/_man,
	Completion/Zsh/Command/_zstyle, Doc/Zsh/compsys.yo:
	support section suffix completion for man pages

	* 47905: Joshua Krusell: Src/Modules/zutil.c,
	Test/V12zparseopts.ztst: Add leading '-' to zparseopts option
	parsing errors

2021-02-11  Bart Schaefer  <schaefer@zsh.org>

	* unposted: NEWS, README: mention the effects of 47997.

	* 47997: Src/Zle/compcore.c: disable xtrace around completions

2021-02-07  Oliver Kiddle  <opk@zsh.org>

	* 47944: Completion/BSD/Command/_bsd_pkg,
	Completion/BSD/Command/_pkgin, Completion/BSD/Command/_systat,
	Completion/Unix/Command/_dmesg: update completions for NetBSD 9

	* 47943: Completion/Unix/Command/_date,
	Completion/Unix/Command/_xargs: update completions for DragonflyBSD

	* 47932: Completion/Linux/Command/_free, Completion/Unix/Command/_w,
	Completion/Unix/Command/_pgrep, Completion/Unix/Command/_vmstat:
	update completions for procps 3.3.16

	* 47931: Completion/BSD/Command/_signify,
	Completion/BSD/Command/_systat, Completion/Unix/Command/_locale,
	Completion/Unix/Command/_netstat, Completion/Unix/Command/_top:
	update completions for OpenBSD base up to 6.8

	* 47930: Completion/BSD/Command/_freebsd-update,
	Completion/Unix/Command/_uniq, Completion/Unix/Type/_diff_options:
	update completions for FreeBSD base up to 12.2
